--- a/site2/index.html
+++ b/site2/index.html
@@ -199,7 +199,7 @@ stray from the paths that we’re expected to follow on the Internet.</p><hr><p>
 <p><small><a href="http://viperslang.tumblr.com/post/63454146164">© Scherezade Siobhan</a></small></p></blockquote>
 </div>
 
-    <script src="//unilogue.github.io/js/index.js"></script>
+    <script src="//unilogue.github.io/archives/site2/js/index.js"></script>
     <script type="text/javascript">
       //Define first typing example:
           new TypingText(document.getElementById("example1"));
