--- a/site1/calendar.html
+++ b/site1/calendar.html
@@ -4,7 +4,7 @@ charset=windows-1252">
 
 
 <link rel="icon" href="https://unilogue.github.io/favi.png">
-<link rel="stylesheet" href="https://unilogue.github.io/css/site1.css">
+<link rel="stylesheet" href="https://unilogue.github.io/archives/site1/css/style.css">
 <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
@@ -33,7 +33,7 @@ charset=windows-1252">
 			<br><br>
 							
 
-		<font size="+3" face="arial, helvetica" color="gray"><a href="http://unilogue.github.io/archives">03</a></font></td>
+		<font size="+3" face="arial, helvetica" color="gray"><a href="http://unilogue.github.io/archives/site1/">03</a></font></td>
 						</tr>
 </tbody></table>
 </td></tr>
