--- a/site1/glossary.html
+++ b/site1/glossary.html
@@ -45,7 +45,7 @@ charset=windows-1252">
 			
 							
 
-		<font size="+3" font face="arial, helvetica" color="gray"><a href="http://unilogue.github.io/archives">03</a></font></td>
+		<font size="+3" font face="arial, helvetica" color="gray"><a href="http://unilogue.github.io/archives/site1">03</a></font></td>
 						</tr>
 </tbody></table>
 </td></tr>
