--- a/site1/glossary.html
+++ b/site1/glossary.html
@@ -4,7 +4,7 @@ charset=windows-1252">
 
 
 <link rel="icon" href="https://unilogue.github.io/favi.png">
-<link rel="stylesheet" href="https://unilogue.github.io/css/site1.css">
+<link rel="stylesheet" href="https://unilogue.github.io/archives/site1/css/style.css">
 <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
