--- a/site1/map2.html
+++ b/site1/map2.html
@@ -3,12 +3,12 @@
 
 
 <link rel="icon" href="https://unilogue.github.io/favi.png">
-<link rel="stylesheet" href="https://unilogue.github.io/archives/site1/css/site1.css">
+<link rel="stylesheet" href="https://unilogue.github.io/archives/site1/css/style.css">
 <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 <script src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
-<script src="http://unilogue.github.io/javascripts/datamaps.world.min.js"></script>
+<script src="http://unilogue.github.io/js/datamaps.world.min.js"></script>
 
 <title>unilogue > map b</title>
 
