--- a/site2/index.html
+++ b/site2/index.html
@@ -19,7 +19,7 @@
   </script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
-  <script src="//unilogue.github.io/js/datamaps.world.min.js"></script>
+  <script src="//unilogue.github.io/js/map/datamaps.world.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
     
   </head>
