--- a/site2/index.html
+++ b/site2/index.html
@@ -29,8 +29,8 @@
   <div class="header" style="font-size: 24px;font-weight:200;
   line-height: 1.52;color: #404040;display: inline-block;
   font-family: 'Source Code Pro', sans-serif;">
-    <p><div id="example1" style="font-size: 24px;font-weight:200;line-height: 1.52;color: #c0c0c0;border-bottom:0px;display: inline-block;font-family: 'Source Code Pro', sans-serif;">
-    <a>&#62; unilogue<span class="blink">_</span></a></div><br>
+    <p><div id="example1" style="font-size: 24px;font-weight:200;line-height: 1.52;display: inline-block;font-family: 'Source Code Pro', sans-serif;">
+    <a style="color: #c0c0c0; border-bottom:0px;">&#62; unilogue<span class="blink">_</span></a></div><br>
     &#62;  <input type="text" placeholder="ENTER COMMAND" />
     <div id="error" style="margin-top:-5px;">
       > UNKNOWN COMMAND<br>
